<resources>
    <string name="htc_private_app">@com.htc:string/nn_gallery</string>
    <string name="crop_save_text">@com.htc:string/va_save</string>
    <string name="upload_all">Upload</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="crop_label">Crop picture</string>
    <string name="view_label">View picture</string>
    <string name="view_video_label">View video</string>
    <string name="camera_setas_wallpaper">@com.htc:string/nn_wallpaper</string>
    <string name="savingImage">Cropping photo...</string>
    <string name="unable_to_load_photo">Unable to load photo.</string>
    <string name="rotate_wait">Rotating photo...</string>
    <string name="multiface_crop_help">Touch a face to crop.</string>
    <string name="no_way_to_share_image">There is no program available to share this folder.</string>
    <string name="confirm_delete_message">Are you sure you want to delete %s?</string>
    <string name="confirm_delete_all_message">Are you sure you want to delete all files in %s?</string>
    <string name="confirm_remove_all_message">Are you sure you want to remove all files in %s?</string>
    <string name="confirm_online_delete_message">Are you sure you want to delete this photo?</string>
    <string name="deleting_online">Deleting...</string>
    <string name="fullfilmview3D">FullFilmView3D</string>
    <string name="filmstripview3D">FilmstripView3D</string>
    <string name="menu_repeat">Repeat on</string>
    <string name="menu_not_repeat">Repeat off</string>
    <string name="details_panel_title">@com.htc:string/nn_details</string>
    <string name="details_photo_whitebalance_auto">@com.htc:string/st_auto</string>
    <string name="details_photo_whitebalance_manual">@com.htc:string/st_manual</string>
    <string name="slide_show_repeat">Repeat</string>
    <string name="slide_show_shuffle">Shuffle</string>
    <string name="slide_show_transition">Transition</string>
    <string name="playback_speed">Playback speed</string>
    <string name="slide_show_orientation">Orientation</string>
    <string name="slide_show_music_title">Play music</string>
    <string name="slide_show_music_track_selsect_title">@com.htc:string/nn_music</string>
    <string name="slide_show_music_picker">Select music</string>
    <string name="slide_show_folder_picker">Folder</string>
    <string name="slide_show_dialog_header">No photos found</string>
    <string name="slide_show_dialog_body">Unable to start slideshow because no photos were found.</string>
    <string name="slide_show_no_music_dialog_header">Playback</string>
    <string name="slide_show_no_music_dialog_body">Do you want to turn on music?</string>
    <string name="slide_show_transition_title">Transition</string>
    <string name="slide_show_transition_option_entry_none">None</string>
    <string name="slide_show_transition_option_entry_fountain">Fountain</string>
    <string name="slide_show_transition_option_entry_cascade">Cascade</string>
    <string name="slide_show_transition_option_entry_fade">Fade</string>
    <string name="slide_show_transition_option_entry_slide">Slide</string>
    <string name="slide_show_transition_option_entry_rotate">Rotate</string>
    <string name="slide_show_transition_option_entry_pan_and_zoom">Pan and zoom</string>
    <string name="slide_show_druation_title">Playback speed</string>
    <string name="slide_show_druation_option_entry_fast">Fast</string>
    <string name="slide_show_druation_option_entry_medium">@com.htc:string/st_medium</string>
    <string name="slide_show_druation_option_entry_slow">Slow</string>
    <string name="slide_show_orientation_title">Orientation</string>
    <string name="slide_show_orientation_option_entry_best_fit">@com.htc:string/st_best_fit</string>
    <string name="slide_show_orientation_option_entry_actual">Actual</string>
    <string name="default_collections_label">Default albums</string>
    <string name="default_collections_flickr_option_contact_list">Contact list</string>
    <string name="menu_filmstrip_view">Filmstrip view</string>
    <string name="menu_grid_view">Grid view</string>
    <string name="service_view_name">Service view</string>
    <string name="collections_view_title">@com.htc:string/nn_albums</string>
    <string name="select_defualt_contacts">Select default contacts</string>
    <string name="select_default_albums">Select default albums</string>
    <string name="facebook">@com.htc:string/nn_facebook</string>
    <string name="flickr">@com.htc:string/nn_flickr</string>
    <string name="login_text">View photos from your account and photos your friends have posted.</string>
    <string name="login_btn_text_facebook">Sign in to Facebook</string>
    <string name="login_btn_text_flickr">Sign in to Flickr</string>
    <string name="please_wait_while_loading_userdata">Loading %s users...</string>
    <string name="please_wait_while_loading_albums">Loading albums...</string>
    <string name="please_wait_while_loading_photos">Loading %s photos...</string>
    <string name="dialog_title_low_storage_space_title">Low storage space</string>
    <string name="dialog_title_low_storage_space_message">Unable to convert the photo because you are getting low on storage space. Please make some free space and try again.</string>
    <string name="loading_sd">Searching for photos &amp; videos...</string>
    <string name="communications_problem">Communications problem</string>
    <string name="try_again_later">Unable to contact the server. Please try again later.</string>
    <string name="refresh_friends">Refresh friends</string>
    <string name="refresh_albums">Refresh albums</string>
    <string name="refresh_photos">Refresh photos</string>
    <string name="sdcard_no_content_mixed">No photo or video found</string>
    <string name="internal_memory_low">Your phone is low on storage space. Please free some space before using this application.</string>
    <string name="ps_error_message">An error was encountered on your phone storage.</string>
    <string name="wait_msg">@com.htc:string/va_wait</string>
    <string name="no_friends_in_account">No friends available. Make sure you have friends in this account.</string>
    <string name="no_albums">The user has no albums to display.</string>
    <string name="no_photos">The folder has no photos to display.</string>
    <string name="select_an_album">Select an album</string>
    <string name="select_an_event">Select an event</string>
    <string name="create_album_folder">Create album</string>
    <string name="album_sdcard">@com.htc:string/nn_other</string>
    <string name="choose_photo_to_delete">Choose items to delete</string>
    <string name="choose_photo_to_remove">Choose items to remove</string>
    <string name="select_a_photo">Select a single item</string>
    <string name="choose_your_destination">Choose your destination</string>
    <string name="no_geo_photos">Unable to find any photos with location information</string>
    <string name="get_location_data_from_network">Getting location data</string>
    <string name="get_location_data_from_network_error">Some locations could not be identified due to network problems</string>
    <string name="select_photos">Select one or more items</string>
    <string name="smart_camera_shots">Camera shots</string>
    <string name="smart_all_photo">All photos</string>
    <string name="smart_all_video">All videos</string>
    <string name="smart_all_downloads">All downloads</string>
    <string name="smart_my_favorite">My favorites</string>
    <string name="smart_snapbooth">Snapbooth</string>
    <string name="smart_my_inks">Inked photos</string>
    <string name="smart_scribbles">Scribbles</string>
    <string name="smart_3dmedias">3D photos &amp; videos</string>
    <string name="smart_panorama_shots">Panorama</string>
    <string name="smart_burst_shots">Burst</string>
    <string name="deleting">Deleting selected data...</string>
    <string name="removing">Removing selected data...</string>
    <string name="remove_all">Remove all</string>
    <string name="editor_actionbar_title">Media Uploader</string>
    <string name="editor_description_hint_facebook">Tap to add caption</string>
    <string name="editor_description_hint_flickr">Tap to add description</string>
    <string name="editor_tag_hint">Tag this photo</string>
    <string name="editor_tag_hint_add">Tap to add tag</string>
    <string name="editor_tag_hint_edit">Tap to edit tag</string>
    <string name="editor_tag_description_title">In this photo:</string>
    <string name="tag_title">Tap a point to add tag</string>
    <string name="tag_option_edit_tag">Edit tag</string>
    <string name="tag_divider_current">@com.htc:string/tm_current</string>
    <string name="tag_option_remove_tag">Remove tag</string>
    <string name="tag_select_a_contact">Select a contact</string>
    <string name="tag_option_change_tag">Change tag</string>
    <string name="option_edit_caption">Edit caption</string>
    <string name="option_edit_caption_hide">Hide caption</string>
    <string name="option_edit_caption_delete">Delete captions</string>
    <string name="option_edit_tag_hide">Hide tags</string>
    <string name="option_edit_tag_delete">Delete tags</string>
    <string name="menu_set_as_lock_scree">Set lock screen wallpaper</string>
    <string name="msg_set_as_lock_scree_done">The picture has been set as your lock screen</string>
    <string name="msg_set_as_wallpaper_done">The picture has been set as your wallpaper</string>
    <string name="msg_set_as_contact_done">The picture has been assigned to the contact</string>
    <string name="save_my_favorite_success">Saved as My favorites</string>
    <string name="menu_edit">@com.htc:string/va_edit</string>
    <string name="menu_my_favorite">Favorite</string>
    <string name="menu_lock_screen">@com.htc:string/va_lock_screen</string>
    <string name="property_file_path">File path:</string>
    <string name="property_resolution">Resolution:</string>
    <string name="property_duration">Duration:</string>
    <string name="property_frame_rate">Frame rate:</string>
    <string name="property_bit_rate">Bit rate:</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_fps">%1$d fps</string>
    <string name="details_kbps">%1$d Kbps</string>
    <string name="details_mbps">%1$g Mbps</string>
    <string name="property_date">Date:</string>
    <string name="property_status">Status:</string>
    <string name="property_status_non_protect">Not protected</string>
    <string name="property_status_protect">Protected</string>
    <string name="property_size">@com.htc:string/nn_size</string>
    <string name="property_type">Type:</string>
    <string name="property_manufacturer">Manufacturer:</string>
    <string name="property_model">Model:</string>
    <string name="property_whitebalance">White balance:</string>
    <string name="details_image_latitude">GPS latitude:</string>
    <string name="details_image_longitude">GPS longitude:</string>
    <string name="details_image_location">Location:</string>
    <string name="no_application_availiable">There is no application available for this option.</string>
    <string name="rename_file_duplicate">This file name has already been used. Please rename the file.</string>
    <string name="rename_file_success">File was renamed successfully</string>
    <string name="drm_protections_info">Protections info</string>
    <string name="drm_count_type_msg">This file can only be viewed %s times. Would you like to view it?</string>
    <string name="drm_lasttime_msg">This file can be viewed only one more time. Would you like to view it?</string>
    <string name="drm_date_type_msg" formatted="false">This file can be used from %s to %s. Would you like to use it?</string>
</resources>