<?xml version="1.0" encoding="utf-8"?>
<com.htc.preference.HtcPreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/slide_show_repeat" android:key="slide_show_repeat_setting_album_mode" android:dependency="" android:defaultValue="true" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/slide_show_shuffle" android:key="slide_show_shuffle_setting_album_mode" android:dependency="" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/slide_show_music_title" android:key="slide_show_music_enable_setting_album_mode" android:dependency="" android:defaultValue="false" />
    <com.htc.preference.HtcPreference android:persistent="true" android:title="@string/slide_show_music_track_selsect_title" android:key="slide_show_music_picker_setting_album_mode" />
    <com.htc.preference.HtcListPreference android:persistent="true" android:title="@string/slide_show_orientation" android:key="slide_show_orientation_setting_album_mode" android:dialogTitle="@string/slide_show_orientation_title" />
    <com.htc.preference.HtcListPreference android:persistent="true" android:title="@string/slide_show_transition" android:key="slide_show_transition_setting_album_mode" android:dialogTitle="@string/slide_show_transition_title" />
    <com.htc.preference.HtcListPreference android:persistent="true" android:title="@string/playback_speed" android:key="slide_show_duration_setting_album_mode" android:dialogTitle="@string/slide_show_druation_title" />
</com.htc.preference.HtcPreferenceScreen>
